--- a/actividades.html
+++ b/actividades.html
@@ -28,10 +28,10 @@
 <main>
   <h2>Actividades</h2>
   <ul>
-    <li>Escuelas de liderazgo juvenil</li>
-    <li>Talleres de formación espiritual</li>
-    <li>Eventos culturales y deportivos</li>
-    <li>Misiones y trabajo comunitario</li>
+    <li>Actividades deportivas</li>
+    <li>actividades Artísticas</li>
+    <li>Trabajo comunitario</li>
+    <li>Auto Descubrimiento </li>
     <li>Encuentros de oración y adoración</li>
   </ul>
 </main>
