--- a/contacto.html
+++ b/contacto.html
@@ -28,14 +28,10 @@
 <main>
   <h2>Contacto</h2>
   <p><strong>Dirección:</strong> Al Costado del Templo de San Martín de Porres,Pueblo Nuevo , Limón, Costa Rica</p>
-  <p><strong>Teléfono:</strong> (506) 2758 0093</p>
-  <p><strong>Email:</strong> <a href="mailto:curia@diocesisdelimon.org">curia@diocesisdelimon.org</a></p>
+  <p><strong>Teléfono:</strong> indefinido </p>
+  <p><strong>Email:</strong> <a href="direcion del correo">indefinido</a></p>
   <p><strong>Redes Sociales:</strong> <a href="https://www.instagram.com/casa.de.la.juventud.cr/reels/" target="_blank">Instagram</a> | <a href="https://www.facebook.com/diocesisdelimon/" target="_blank">Facebook</a></p>
 </main>
 
 <footer>
-  <p>© 2025 Casa de la Juventud Carlos Acutis - Diócesis de Limón</p>
-</footer>
-
-</body>
-</html>
+  <p>© 2025 Casa de la Juventud Carlos Acutis - Diócesis
